# MoEITS

./: DeepSeekMoE_simplification_service.py  DeepSeekV2Lite_simplification_service.py  DeepSeek_eval.py  Mixtral8x7b_simplification_service.py  MoEITS_simplification_service.py  Qwen2MoE_simplification_service.py  README.md  main.py  notas.txt  pruebas.py  pyproject.toml  requirements.txt
app/: experiments.sh  main.py
evals/: MoEITS_evaluation.py  ablation_study_eval.sh  benchmark.py  llm_outputs_quality.py  sustainability_evaluation.py  tasks_evaluation.py
models/deepseek_moe_16b/: modeling_deepseek.py
models/deepseek_v2_lite/: modeling_deepseek.py
models/qwen2_moe/: __init__.py  configuration_qwen2_moe.py  modeling_qwen2_moe.py
src/: DeepSeekMoE_simplification_service.py  DeepSeekV2Lite_simplification_service.py  utils.py
src/moeits/: DeepSeekMoE_simplification_service.py  DeepSeekV2Lite_simplification_service.py  Mixtral8x7b_simplification_service.py  MoEITS_simplification_service.py  Qwen2MoE_simplification_service.py  Qwen3.5_simplification_service.py  Qwen3_5_simplification_service.py  main.py  utils.py
src/moeits/models/deepseek_moe_16b/: configuration_deepseek.py
src/moeits/models/deepseek_v2_lite/: configuration_deepseek.py  modeling_deepseek.py
src/moeits/models/mixtral8x7b/: configuration_mixtral.py  modeling_mixtral.py
src/moeits/models/qwen2_moe/: __init__.py  modular_qwen2_moe.py  (+2 more)
tests/: test_mixtral8x7b_simplification.py  test_qwen_simplification.py  test_simplification.py
training/: ablation_study_training.sh  ds_config.json  train.py
